--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,5 +1,5 @@
 <h1>Admin Panel</h1>
-<form action="/admin-roles" method="GET">
+<form action="/update" method="POST">
     <div>
         <label for="username">Select User:</label>
         <select id="username" name="username" required>
