--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,11 +2,11 @@
 <form action="/login" method="POST">
     <div>
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" required value="admin">
     </div>
     <div>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" required value="admin">
     </div>
     <button type="submit">Login</button>
 </form>
