--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,33 @@
 <section class="homePage__container">
-    <h1 class="">Login</h1>
-    <form action="/login" method="POST" class="space-y-6">
-      <div>
-        <label for="username" class="">Username</label>
-        <input type="text" id="username" name="username" required value="admin" class="" />
-      </div>
-      <div>
-        <label for="password" class="">Password</label>
-        <input type="password" id="password" name="password" required value="admin" />
-      </div>
-      <button type="submit" class="button-secondary">Login</button>
-    </form>
-    <p class="">
-      Don't have an account?
-      <a href="/singup" class="">Signup</a>
-    </p>
+  <img src="/logo.png" alt="Lab logo" width="110px" height="120px"/>
+  <h1 style="font-size: xx-large; margin-bottom: 1rem">Log In to Demo</h1>
+  <form action="/login" method="POST" style="width: 100%; max-width: 300px">
+    <div style="text-align: left; margin-bottom: 1rem">
+      <input
+        type="text"
+        id="username"
+        name="username"
+        required
+        value="admin"
+        placeholder="Username"
+      />
+    </div>
+    <div style="text-align: left; margin-bottom: 1rem">
+      <input
+        type="password"
+        id="password"
+        name="password"
+        required
+        value="admin"
+        placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;"
+      />
+    </div>
+    <button type="submit" class="button-secondary" style="margin-bottom: 1rem; width: 100%">
+      Log In
+    </button>
+  </form>
+  <p>
+    Don't have an account?
+    <a href="/singup" style="color: var(--primary); text-decoration: underline">Signup</a>
+  </p>
 </section>
